[package]
name = "reap"
version = "0.1.0"
authors = ["David Judd <david.a.judd@gmail.com>"]
edition = "2018"

homepage = "https://github.com/djudd/reap"
repository = "https://github.com/djudd/reap"
readme = "README.md"

exclude = ["test/*"]

[dependencies]
bytesize = "1.0"
clap = "2.0"
petgraph = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "reap"
