[package]
name = "reap"
version = "0.3.0"
authors = ["David Judd <david.a.judd@gmail.com>"]
description = "A tool for parsing Ruby heap dumps"
license = "Apache-2.0"
edition = "2018"

homepage = "https://github.com/djudd/reap"
repository = "https://github.com/djudd/reap"
readme = "README.md"

exclude = ["test/*"]

[dependencies]
bytesize = "1.0"
structopt = "0.2"
inferno = "0.8"
petgraph = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
timed_function = { version = "0.1", path = "timed_function" }

[[bin]]
name = "reap"
