[package]
name = "timed_function"
version = "0.1.0"
authors = ["David Judd <david.a.judd@gmail.com>"]
edition = "2018"
description = "A procedural macro for printing timing for a function"
license = "Apache-2.0"

[lib]
proc-macro = true

[features]
timed = []

[dependencies]
syn = {version = "0.15.15", features = ["full"]}
quote = "0.6.9"
